syntax = "proto3";

package proto.user.v1; 

option go_package = "github.com/AnnuCode/toy-grpc/gen/go/user/v1;userpb";

import "proto/user/v1/user.proto";

service GetUserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}
service GetUsersService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}

message GetUserRequest{
    int64 id = 1;

}
message GetUserResponse{
    User user = 1;
}
message GetUsersRequest{
    repeated int64 id = 1;
}
message GetUsersResponse{
    repeated User users = 2;
}
